--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_APPS_SCRIPT_URL=https://script.google.com/macros/s/AKfycbwsWmFLh2W6RgUke2Sq28f1vVO5-U3dzL5Gun1wMUIs2nkgUObzYpdhNzQ8drzpWgcsFg/exec
+VITE_APPLICATION_FEE_INR=500
